--- a/app/src/main/res/layout/fragment_game_board.xml
+++ b/app/src/main/res/layout/fragment_game_board.xml
@@ -7,14 +7,15 @@
     android:layout_height="match_parent"
     tools:context=".GameBoard">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/playerProfilSection"
+        android:name="fr.epita.android.kingofelysee.sections.PlayerProfileSection"
+        android:layout_width="410dp"
+        android:layout_height="104dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.5" />
+        tools:layout="@layout/fragment_player_profile_section" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
