--- a/app/src/main/res/layout/fragment_game_board.xml
+++ b/app/src/main/res/layout/fragment_game_board.xml
@@ -18,4 +18,16 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:layout="@layout/fragment_player_profile_section" />
 
+    <Button
+        android:id="@+id/life_inc_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="increment_life"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/playerProfilSection"
+        app:layout_constraintVertical_bias="0.5" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
