--- a/app/src/main/res/layout/fragment_game_board.xml
+++ b/app/src/main/res/layout/fragment_game_board.xml
@@ -30,4 +30,14 @@
         app:layout_constraintTop_toBottomOf="@+id/playerProfilSection"
         app:layout_constraintVertical_bias="0.5" />
 
+    <Button
+        android:id="@+id/navToDiceButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Dice"
+        app:layout_constraintBottom_toTopOf="@+id/life_inc_btn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/playerProfilSection" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
