--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -27,5 +27,14 @@
         android:id="@+id/gameBoard"
         android:name="fr.epita.android.kingofelysee.GameBoard"
         android:label="fragment_game_board"
-        tools:layout="@layout/fragment_game_board" />
+        tools:layout="@layout/fragment_game_board" >
+        <action
+            android:id="@+id/action_gameBoard_to_gameDice"
+            app:destination="@id/gameDice" />
+    </fragment>
+    <fragment
+        android:id="@+id/gameDice"
+        android:name="fr.epita.android.kingofelysee.GameDice"
+        android:label="fragment_game_dice"
+        tools:layout="@layout/fragment_game_dice" />
 </navigation>
