--- a/app/src/main/res/layout/fragment_game_menu.xml
+++ b/app/src/main/res/layout/fragment_game_menu.xml
@@ -2,9 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/game_menu"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/game_menu"
+    android:background="#1D1E25"
     tools:context=".GameMenu">
 
 
@@ -12,11 +13,13 @@
         android:id="@+id/menu_title_tv"
         android:layout_width="321dp"
         android:layout_height="67dp"
-        android:layout_marginTop="80dp"
-        android:fontFamily="cursive"
-        android:text="King of Elysée"
+        android:fontFamily="serif"
+        android:rotation="-10"
+        android:text="King of Élysée"
         android:textAlignment="center"
+        android:textColor="#FFFFFF"
         android:textSize="48sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,12 +27,42 @@
 
     <Button
         android:id="@+id/start_btn"
+        style="@style/Widget.AppCompat.Button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="300dp"
-        android:text="Start"
+        android:layout_marginTop="64dp"
+        android:paddingStart="32dp"
+        android:paddingTop="8dp"
+        android:paddingEnd="32dp"
+        android:paddingBottom="8dp"
+        android:text="Jouer"
+        android:textSize="34sp"
+        app:cornerRadius="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/menu_title_tv" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="53dp"
+        android:layout_height="39dp"
+        android:src="@drawable/flag_france"
+        app:layout_constraintBottom_toTopOf="@+id/menu_title_tv"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.25"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Remportez l'Élysée !"
+        android:textColor="#3F51B5"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.75"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/menu_title_tv" />
 </androidx.constraintlayout.widget.ConstraintLayout>
