--- a/app/src/main/res/layout/fragment_game_board.xml
+++ b/app/src/main/res/layout/fragment_game_board.xml
@@ -9,7 +9,7 @@
     tools:context=".GameBoard">
 
     <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/playerProfilSection"
+        android:id="@+id/profile_0"
         android:name="fr.epita.android.kingofelysee.sections.PlayerProfileSection"
         android:layout_width="0dp"
         android:layout_height="128dp"
@@ -47,7 +47,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/playerProfilSection"
+        app:layout_constraintTop_toBottomOf="@+id/profile_0"
         tools:layout="@layout/fragment_map" />
 
     <HorizontalScrollView
@@ -68,7 +68,7 @@
             android:orientation="horizontal">
 
             <androidx.fragment.app.FragmentContainerView
-                android:id="@+id/fragmentContainerView6"
+                android:id="@+id/profile_1"
                 android:name="fr.epita.android.kingofelysee.sections.PlayerProfileSection"
                 android:layout_width="320dp"
                 android:layout_height="128dp"
@@ -79,43 +79,43 @@
                 tools:layout="@layout/fragment_player_profile_section" />
 
             <androidx.fragment.app.FragmentContainerView
-                android:id="@+id/fragmentContainerView5"
+                android:id="@+id/profile_2"
                 android:name="fr.epita.android.kingofelysee.sections.PlayerProfileSection"
                 android:layout_width="320dp"
                 android:layout_height="128dp"
                 android:layout_marginStart="16dp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/fragmentContainerView6"
+                app:layout_constraintStart_toEndOf="@+id/profile_1"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.5"
                 tools:layout="@layout/fragment_player_profile_section" />
 
             <androidx.fragment.app.FragmentContainerView
-                android:id="@+id/fragmentContainerView2"
+                android:id="@+id/profile_3"
                 android:name="fr.epita.android.kingofelysee.sections.PlayerProfileSection"
                 android:layout_width="320dp"
                 android:layout_height="128dp"
                 android:layout_marginStart="16dp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/fragmentContainerView5"
+                app:layout_constraintStart_toEndOf="@+id/profile_2"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.0"
                 tools:layout="@layout/fragment_player_profile_section" />
 
             <androidx.fragment.app.FragmentContainerView
-                android:id="@+id/fragmentContainerView3"
+                android:id="@+id/profile_4"
                 android:name="fr.epita.android.kingofelysee.sections.PlayerProfileSection"
                 android:layout_width="320dp"
                 android:layout_height="128dp"
                 android:layout_marginStart="16dp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/fragmentContainerView2"
+                app:layout_constraintStart_toEndOf="@+id/profile_3"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.0"
                 tools:layout="@layout/fragment_player_profile_section" />
 
             <androidx.fragment.app.FragmentContainerView
-                android:id="@+id/fragmentContainerView4"
+                android:id="@+id/profile_5"
                 android:name="fr.epita.android.kingofelysee.sections.PlayerProfileSection"
                 android:layout_width="320dp"
                 android:layout_height="128dp"
@@ -123,7 +123,7 @@
                 android:layout_marginEnd="16dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/fragmentContainerView3"
+                app:layout_constraintStart_toEndOf="@+id/profile_4"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.0"
                 tools:layout="@layout/fragment_player_profile_section" />
