--- a/app/src/main/res/layout/fragment_game_board.xml
+++ b/app/src/main/res/layout/fragment_game_board.xml
@@ -10,7 +10,7 @@
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/profile_0"
-        android:name="fr.epita.android.kingofelysee.sections.PlayerProfileSection"
+        android:name="fr.epita.android.kingofelysee.sections.PlayerProfileFragment"
         android:layout_width="0dp"
         android:layout_height="128dp"
         android:layout_marginStart="16dp"
@@ -28,6 +28,8 @@
         android:id="@+id/mycards_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:alpha=".5"
+        android:clickable="false"
         android:text="Mes cartes"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/shop_button"
@@ -68,7 +70,7 @@
 
             <androidx.fragment.app.FragmentContainerView
                 android:id="@+id/profile_1"
-                android:name="fr.epita.android.kingofelysee.sections.PlayerProfileSection"
+                android:name="fr.epita.android.kingofelysee.sections.PlayerProfileFragment"
                 android:layout_width="320dp"
                 android:layout_height="128dp"
                 android:layout_marginStart="16dp"
@@ -79,7 +81,7 @@
 
             <androidx.fragment.app.FragmentContainerView
                 android:id="@+id/profile_2"
-                android:name="fr.epita.android.kingofelysee.sections.PlayerProfileSection"
+                android:name="fr.epita.android.kingofelysee.sections.PlayerProfileFragment"
                 android:layout_width="320dp"
                 android:layout_height="128dp"
                 android:layout_marginStart="16dp"
@@ -91,7 +93,7 @@
 
             <androidx.fragment.app.FragmentContainerView
                 android:id="@+id/profile_3"
-                android:name="fr.epita.android.kingofelysee.sections.PlayerProfileSection"
+                android:name="fr.epita.android.kingofelysee.sections.PlayerProfileFragment"
                 android:layout_width="320dp"
                 android:layout_height="128dp"
                 android:layout_marginStart="16dp"
@@ -103,7 +105,7 @@
 
             <androidx.fragment.app.FragmentContainerView
                 android:id="@+id/profile_4"
-                android:name="fr.epita.android.kingofelysee.sections.PlayerProfileSection"
+                android:name="fr.epita.android.kingofelysee.sections.PlayerProfileFragment"
                 android:layout_width="320dp"
                 android:layout_height="128dp"
                 android:layout_marginStart="16dp"
@@ -115,7 +117,7 @@
 
             <androidx.fragment.app.FragmentContainerView
                 android:id="@+id/profile_5"
-                android:name="fr.epita.android.kingofelysee.sections.PlayerProfileSection"
+                android:name="fr.epita.android.kingofelysee.sections.PlayerProfileFragment"
                 android:layout_width="320dp"
                 android:layout_height="128dp"
                 android:layout_marginStart="16dp"
@@ -133,6 +135,8 @@
         android:id="@+id/shop_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:alpha=".5"
+        android:clickable="false"
         android:text="boutique"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -156,22 +160,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
-        android:text="À l'adversaire de jouer"
+        android:text="Bon courage !"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
         android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/scrollView2" />
-
-    <Button
-        android:id="@+id/navToDiceButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Dice"
-        app:layout_constraintBottom_toTopOf="@+id/life_inc_btn"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/playerProfilSection" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
