--- a/app/src/main/res/layout/fragment_player_profile_section.xml
+++ b/app/src/main/res/layout/fragment_player_profile_section.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/card_bg"
-    tools:context="sections.PlayerProfileSection">
+    tools:context="sections.PlayerProfileFragment">
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/image_img"
