Cards can now be bought

--- a/app/src/main/res/layout/fragment_shop.xml
+++ b/app/src/main/res/layout/fragment_shop.xml
@@ -20,11 +20,11 @@
         tools:src="@tools:sample/avatars" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/shop_buy_card_1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="Button"
+        android:text="Acheter!"
         app:layout_constraintEnd_toEndOf="@+id/card1Image"
         app:layout_constraintStart_toStartOf="@+id/card1Image"
         app:layout_constraintTop_toBottomOf="@+id/card1Image" />
@@ -42,13 +42,23 @@
         tools:src="@tools:sample/avatars" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/shop_buy_card_2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="Button"
+        android:text="Acheter!"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/card2Image"
+        app:layout_constraintTop_toBottomOf="@+id/card2Image" />
+
+    <Button
+        android:id="@+id/reset_shop_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Renouveler"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/card2Image" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
