You can now buy from the store and the cards that do not require a specific target work, but there are some bugs when buying : sometimes the ui does not refresh

--- a/app/src/main/res/layout/fragment_my_cards.xml
+++ b/app/src/main/res/layout/fragment_my_cards.xml
@@ -8,68 +8,133 @@
     tools:context=".MyCardsFragment">
 
     <HorizontalScrollView
+        android:id="@+id/parent_horizontal_scroll_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:contentDescription="macron"
-        android:orientation="horizontal"
+        android:contentDescription="toto"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent" >
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="256dp"
                 android:layout_height="match_parent"
-                android:orientation="horizontal">
+                android:gravity="center"
+                android:orientation="vertical">
 
-                <LinearLayout
+                <ImageView
+                    android:id="@+id/card_image_1"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
+                    android:layout_height="512dp"
+                    android:src="@drawable/bad_coke" />
 
-                    <ImageView
-                        android:id="@+id/imageView11"
-                        android:layout_width="256dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="0.5"
-                        android:src="@drawable/bogoss" />
-
-                    <Button
-                        android:id="@+id/button4"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="0.5"
-                        android:text="Button" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:id="@+id/imageView10"
-                        android:layout_width="256dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="0.5"
-                        android:src="@drawable/bogoss" />
-
-                    <Button
-                        android:id="@+id/button5"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="0.5"
-                        android:text="Button" />
-                </LinearLayout>
-
+                <Button
+                    android:id="@+id/card_button_1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Button" />
             </LinearLayout>
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </HorizontalScrollView>
 
+            <LinearLayout
+                android:layout_width="256dp"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:id="@+id/card_image_2"
+                    android:layout_width="match_parent"
+                    android:layout_height="512dp"
+                    android:src="@drawable/bad_coke" />
+
+                <Button
+                    android:id="@+id/card_button_2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Button" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="256dp"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:id="@+id/card_image_3"
+                    android:layout_width="match_parent"
+                    android:layout_height="512dp"
+                    android:src="@drawable/bad_coke" />
+
+                <Button
+                    android:id="@+id/card_button_3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Button" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="256dp"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:id="@+id/card_image_4"
+                    android:layout_width="match_parent"
+                    android:layout_height="512dp"
+                    android:src="@drawable/bad_coke" />
+
+                <Button
+                    android:id="@+id/card_button_4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Button" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="256dp"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:id="@+id/card_image_5"
+                    android:layout_width="match_parent"
+                    android:layout_height="512dp"
+                    android:src="@drawable/bad_coke" />
+
+                <Button
+                    android:id="@+id/card_button_5"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Button" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="256dp"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:id="@+id/card_image_6"
+                    android:layout_width="match_parent"
+                    android:layout_height="512dp"
+                    android:src="@drawable/bad_coke" />
+
+                <Button
+                    android:id="@+id/card_button_6"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Button" />
+            </LinearLayout>
+        </LinearLayout>
+    </HorizontalScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
