--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -64,6 +64,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
+        android:backgroundTint="@color/blue_700"
         android:text="Tour suivant"
         android:textSize="10sp"
         app:layout_constraintBottom_toBottomOf="parent"
