--- a/app/src/main/res/layout/fragment_my_cards.xml
+++ b/app/src/main/res/layout/fragment_my_cards.xml
@@ -23,10 +23,12 @@
             android:orientation="horizontal">
 
             <LinearLayout
+                android:id="@+id/layout1"
                 android:layout_width="256dp"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                tools:visibility="gone">
 
                 <ImageView
                     android:id="@+id/card_image_1"
@@ -38,14 +40,16 @@
                     android:id="@+id/card_button_1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Button" />
+                    android:text="Utiliser" />
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/layout2"
                 android:layout_width="256dp"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                tools:visibility="gone">
 
                 <ImageView
                     android:id="@+id/card_image_2"
@@ -57,14 +61,16 @@
                     android:id="@+id/card_button_2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Button" />
+                    android:text="Utiliser" />
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/layout3"
                 android:layout_width="256dp"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                tools:visibility="gone">
 
                 <ImageView
                     android:id="@+id/card_image_3"
@@ -76,14 +82,16 @@
                     android:id="@+id/card_button_3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Button" />
+                    android:text="Utiliser" />
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/layout4"
                 android:layout_width="256dp"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                tools:visibility="gone">
 
                 <ImageView
                     android:id="@+id/card_image_4"
@@ -95,14 +103,16 @@
                     android:id="@+id/card_button_4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Button" />
+                    android:text="Utiliser" />
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/layout5"
                 android:layout_width="256dp"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                tools:visibility="gone">
 
                 <ImageView
                     android:id="@+id/card_image_5"
@@ -114,14 +124,16 @@
                     android:id="@+id/card_button_5"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Button" />
+                    android:text="Utiliser" />
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/layout6"
                 android:layout_width="256dp"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:visibility="gone">
 
                 <ImageView
                     android:id="@+id/card_image_6"
@@ -133,7 +145,7 @@
                     android:id="@+id/card_button_6"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Button" />
+                    android:text="Utiliser" />
             </LinearLayout>
         </LinearLayout>
     </HorizontalScrollView>
