--- a/app/src/main/res/layout/fragment_shop.xml
+++ b/app/src/main/res/layout/fragment_shop.xml
@@ -55,10 +55,10 @@
         android:id="@+id/reset_shop_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:text="Renouveler"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/card2Image" />
+        app:layout_constraintTop_toBottomOf="@+id/shop_buy_card_2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
